fixes on mobile

--- a/app/styles/_mobile-card.scss
+++ b/app/styles/_mobile-card.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 480px) {
+@media screen and (max-width: $mobile-max-width) {
   #cardSection {
     $mobile-ratio: 0.3;
 
