--- a/app/styles/_mobile.scss
+++ b/app/styles/_mobile.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 480px) {
+@media screen and (max-width: $mobile-max-width) {
   .container {
     width: 100%;
   }
@@ -11,6 +11,7 @@
     z-index: 10;
     transition: top .3s, opacity .3s;
     opacity: 0;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px 0px;
 
     &.open {
       height: 100%;
@@ -48,6 +49,13 @@
           a {
             color: white;
             text-decoration: none;
+            border-bottom: 2px solid transparent;
+            padding-bottom: 5px;
+            transition: border .3s;
+
+            &.active, &:active, &:hover {
+              border-bottom-color: white;
+            }
           }
         }
       }
@@ -91,6 +99,10 @@
   }
 
   #main {
+    .ragged-edge.top img {
+      width: 200%;
+      right: 0;
+    }
     h2 {
       color: $purple;
     }
@@ -105,29 +117,13 @@
         padding-left: 0;
       }
       aside.quote {
-        margin: 40px 0;
+        margin: 30px 0;
 
         .inner {
           border: 0;
-          position: relative;
-          padding: 0 40px;
+          border-left: 5px solid white;
+          padding: 0 0 0 20px;
           font-size: 1.8em;
-
-          &:before, &:after {
-            position: absolute;
-            font-size: 2em;
-          }
-
-          &:before {
-            content: open-quote;
-            left: 5px;
-            top: -10px;
-          }
-          &:after {
-            content: close-quote;
-            right: 5px;
-            bottom: -40px;
-          }
         }
       }
 
@@ -163,12 +159,16 @@
   #sub-header{
     .project-logo {
       width: 90px;
-      bottom: 20px;
+      bottom: 50px;
     }
     .project-title {
-      font-size: 3em;
+      font-size: 3.5em;
       margin-left: 120px;
-      bottom: 25px;
+      bottom: 55px;
+    }
+    .ragged-edge img {
+      width: 300%;
+      right: 0;
     }
   }
 }
