--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -13,7 +13,10 @@
 
     .nav-element a {
       color: black;
-      border: 0px solid black;
+
+      &.active, &:hover, &:active {
+        border-bottom-color: black;
+      }
     }
   }
 
@@ -30,10 +33,11 @@
       font-family: AvenirMedium;
       text-decoration: none;
       cursor: pointer;
-      border: 0px solid white;
+      border-bottom: 2px solid transparent;
+      transition: border .3s;
 
       &.active, &:hover, &:active {
-        border-bottom-width: 2px;
+        border-bottom-color: white;
       }
     }
   }
